# openapi.yaml
@@ -24,6 +24,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/admin_withdraw_fix:
+        get:
+            tags:
+                - App
+            operationId: App_AdminUserWithdrawFix
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminUserWithdrawFixReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/all:
         get:
             tags:
@@ -1202,6 +1220,9 @@ components:
                     format: int64
                 createdAt:
                     type: string
+        AdminUserWithdrawFixReply:
+            type: object
+            properties: {}
         AdminVipUpdateReply:
             type: object
             properties: {}
